@@ -32,9 +32,9 @@ enum instructions {
   APPTERM, APPTERM1, APPTERM2, APPTERM3,
   RETURN, RESTART, GRAB,
   CLOSURE, CLOSUREREC,
-  OFFSETCLOSUREM2, OFFSETCLOSURE0, OFFSETCLOSURE2, OFFSETCLOSURE,
-  PUSHOFFSETCLOSUREM2, PUSHOFFSETCLOSURE0,
-  PUSHOFFSETCLOSURE2, PUSHOFFSETCLOSURE,
+  OFFSETCLOSUREM3, OFFSETCLOSURE0, OFFSETCLOSURE3, OFFSETCLOSURE,
+  PUSHOFFSETCLOSUREM3, PUSHOFFSETCLOSURE0,
+  PUSHOFFSETCLOSURE3, PUSHOFFSETCLOSURE,
   GETGLOBAL, PUSHGETGLOBAL, GETGLOBALFIELD, PUSHGETGLOBALFIELD, SETGLOBAL,
   ATOM0, ATOM, PUSHATOM0, PUSHATOM,
   MAKEBLOCK, MAKEBLOCK1, MAKEBLOCK2, MAKEBLOCK3, MAKEFLOATBLOCK,
