@@ -296,13 +296,13 @@ let op_shapes = [
   opGRAB, Uint;
   opCLOSURE, Uint_Disp;
   opCLOSUREREC, Closurerec;
-  opOFFSETCLOSUREM2, Nothing;
+  opOFFSETCLOSUREM3, Nothing;
   opOFFSETCLOSURE0, Nothing;
-  opOFFSETCLOSURE2, Nothing;
+  opOFFSETCLOSURE3, Nothing;
   opOFFSETCLOSURE, Sint;  (* was Uint *)
-  opPUSHOFFSETCLOSUREM2, Nothing;
+  opPUSHOFFSETCLOSUREM3, Nothing;
   opPUSHOFFSETCLOSURE0, Nothing;
-  opPUSHOFFSETCLOSURE2, Nothing;
+  opPUSHOFFSETCLOSURE3, Nothing;
   opPUSHOFFSETCLOSURE, Sint; (* was Nothing *)
   opGETGLOBAL, Getglobal;
   opPUSHGETGLOBAL, Getglobal;
